python/scl/_bindings/components.py

"""
Auto-generated Python bindings for components

Source: scl/binding/c_api/components.h
Generated by: generate_bindings.py

DO NOT EDIT - This file is automatically generated.
"""

from __future__ import annotations

from ctypes import (
    CFUNCTYPE,
    POINTER,
    Structure,
    c_bool,
    c_char,
    c_char_p,
    c_double,
    c_float,
    c_int,
    c_int8,
    c_int16,
    c_int32,
    c_int64,
    c_long,
    c_longlong,
    c_short,
    c_size_t,
    c_ssize_t,
    c_ubyte,
    c_uint,
    c_uint8,
    c_uint16,
    c_uint32,
    c_uint64,
    c_ulong,
    c_ulonglong,
    c_ushort,
    c_void_p,
    c_wchar_p,
)
from typing import Any, Optional

from .._loader import get_library

# Load the native library
_lib = get_library()


# ===========================================================================
# Functions
# ===========================================================================

# C: int scl_comp_connected_components(struct scl_sparse_matrix * adjacency, scl_index_t * component_labels, scl_index_t * n_components)
_lib.scl_comp_connected_components.argtypes = [POINTER(c_void_p), POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_connected_components.restype = c_int

def scl_comp_connected_components(adjacency, component_labels, n_components):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        component_labels: scl_index_t *
        n_components: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_connected_components(adjacency, component_labels, n_components)


# C: int scl_comp_is_connected(struct scl_sparse_matrix * adjacency, int * is_connected)
_lib.scl_comp_is_connected.argtypes = [POINTER(c_void_p), POINTER(c_int)]
_lib.scl_comp_is_connected.restype = c_int

def scl_comp_is_connected(adjacency, is_connected):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        is_connected: int *
    
    Returns:
        int
    """
    return _lib.scl_comp_is_connected(adjacency, is_connected)


# C: int scl_comp_largest_component(struct scl_sparse_matrix * adjacency, scl_index_t * node_mask, scl_index_t * component_size)
_lib.scl_comp_largest_component.argtypes = [POINTER(c_void_p), POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_largest_component.restype = c_int

def scl_comp_largest_component(adjacency, node_mask, component_size):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        node_mask: scl_index_t *
        component_size: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_largest_component(adjacency, node_mask, component_size)


# C: int scl_comp_component_sizes(struct scl_sparse_matrix * adjacency, scl_index_t * sizes, scl_index_t * n_components)
_lib.scl_comp_component_sizes.argtypes = [POINTER(c_void_p), POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_component_sizes.restype = c_int

def scl_comp_component_sizes(adjacency, sizes, n_components):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        sizes: scl_index_t *
        n_components: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_component_sizes(adjacency, sizes, n_components)


# C: int scl_comp_bfs(struct scl_sparse_matrix * adjacency, long source, scl_index_t * distances, scl_index_t * predecessors)
_lib.scl_comp_bfs.argtypes = [POINTER(c_void_p), c_long, POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_bfs.restype = c_int

def scl_comp_bfs(adjacency, source, distances, predecessors):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        source: long
        distances: scl_index_t *
        predecessors: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_bfs(adjacency, source, distances, predecessors)


# C: int scl_comp_multi_source_bfs(struct scl_sparse_matrix * adjacency, const scl_index_t * sources, int n_sources, scl_index_t * distances)
_lib.scl_comp_multi_source_bfs.argtypes = [POINTER(c_void_p), POINTER(c_void_p), c_int, POINTER(c_void_p)]
_lib.scl_comp_multi_source_bfs.restype = c_int

def scl_comp_multi_source_bfs(adjacency, sources, n_sources, distances):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        sources: const scl_index_t *
        n_sources: int
        distances: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_multi_source_bfs(adjacency, sources, n_sources, distances)


# C: int scl_comp_parallel_bfs(struct scl_sparse_matrix * adjacency, long source, scl_index_t * distances)
_lib.scl_comp_parallel_bfs.argtypes = [POINTER(c_void_p), c_long, POINTER(c_void_p)]
_lib.scl_comp_parallel_bfs.restype = c_int

def scl_comp_parallel_bfs(adjacency, source, distances):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        source: long
        distances: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_parallel_bfs(adjacency, source, distances)


# C: int scl_comp_dfs(struct scl_sparse_matrix * adjacency, long source, scl_index_t * discovery_time, scl_index_t * finish_time)
_lib.scl_comp_dfs.argtypes = [POINTER(c_void_p), c_long, POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_dfs.restype = c_int

def scl_comp_dfs(adjacency, source, discovery_time, finish_time):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        source: long
        discovery_time: scl_index_t *
        finish_time: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_dfs(adjacency, source, discovery_time, finish_time)


# C: int scl_comp_topological_sort(struct scl_sparse_matrix * adjacency, scl_index_t * order, int * is_valid)
_lib.scl_comp_topological_sort.argtypes = [POINTER(c_void_p), POINTER(c_void_p), POINTER(c_int)]
_lib.scl_comp_topological_sort.restype = c_int

def scl_comp_topological_sort(adjacency, order, is_valid):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        order: scl_index_t *
        is_valid: int *
    
    Returns:
        int
    """
    return _lib.scl_comp_topological_sort(adjacency, order, is_valid)


# C: int scl_comp_graph_diameter(struct scl_sparse_matrix * adjacency, scl_index_t * diameter)
_lib.scl_comp_graph_diameter.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_graph_diameter.restype = c_int

def scl_comp_graph_diameter(adjacency, diameter):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        diameter: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_graph_diameter(adjacency, diameter)


# C: int scl_comp_average_path_length(struct scl_sparse_matrix * adjacency, int max_samples, scl_real_t * avg_length)
_lib.scl_comp_average_path_length.argtypes = [POINTER(c_void_p), c_int, POINTER(c_void_p)]
_lib.scl_comp_average_path_length.restype = c_int

def scl_comp_average_path_length(adjacency, max_samples, avg_length):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        max_samples: int
        avg_length: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_average_path_length(adjacency, max_samples, avg_length)


# C: int scl_comp_clustering_coefficient(struct scl_sparse_matrix * adjacency, scl_real_t * coefficients)
_lib.scl_comp_clustering_coefficient.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_clustering_coefficient.restype = c_int

def scl_comp_clustering_coefficient(adjacency, coefficients):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        coefficients: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_clustering_coefficient(adjacency, coefficients)


# C: int scl_comp_global_clustering_coefficient(struct scl_sparse_matrix * adjacency, scl_real_t * coefficient)
_lib.scl_comp_global_clustering_coefficient.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_global_clustering_coefficient.restype = c_int

def scl_comp_global_clustering_coefficient(adjacency, coefficient):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        coefficient: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_global_clustering_coefficient(adjacency, coefficient)


# C: int scl_comp_count_triangles(struct scl_sparse_matrix * adjacency, scl_size_t * n_triangles)
_lib.scl_comp_count_triangles.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_count_triangles.restype = c_int

def scl_comp_count_triangles(adjacency, n_triangles):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        n_triangles: scl_size_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_count_triangles(adjacency, n_triangles)


# C: int scl_comp_degree_sequence(struct scl_sparse_matrix * adjacency, scl_index_t * degrees)
_lib.scl_comp_degree_sequence.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_degree_sequence.restype = c_int

def scl_comp_degree_sequence(adjacency, degrees):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        degrees: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_degree_sequence(adjacency, degrees)


# C: int scl_comp_degree_statistics(struct scl_sparse_matrix * adjacency, scl_real_t * mean_degree, scl_real_t * max_degree, scl_real_t * min_degree, scl_real_t * std_degree)
_lib.scl_comp_degree_statistics.argtypes = [POINTER(c_void_p), POINTER(c_void_p), POINTER(c_void_p), POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_degree_statistics.restype = c_int

def scl_comp_degree_statistics(adjacency, mean_degree, max_degree, min_degree, std_degree):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        mean_degree: scl_real_t *
        max_degree: scl_real_t *
        min_degree: scl_real_t *
        std_degree: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_degree_statistics(adjacency, mean_degree, max_degree, min_degree, std_degree)


# C: int scl_comp_degree_distribution(struct scl_sparse_matrix * adjacency, scl_size_t * histogram, long max_degree)
_lib.scl_comp_degree_distribution.argtypes = [POINTER(c_void_p), POINTER(c_void_p), c_long]
_lib.scl_comp_degree_distribution.restype = c_int

def scl_comp_degree_distribution(adjacency, histogram, max_degree):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        histogram: scl_size_t *
        max_degree: long
    
    Returns:
        int
    """
    return _lib.scl_comp_degree_distribution(adjacency, histogram, max_degree)


# C: int scl_comp_graph_density(struct scl_sparse_matrix * adjacency, scl_real_t * density)
_lib.scl_comp_graph_density.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_graph_density.restype = c_int

def scl_comp_graph_density(adjacency, density):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        density: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_graph_density(adjacency, density)


# C: int scl_comp_kcore_decomposition(struct scl_sparse_matrix * adjacency, scl_index_t * core_numbers)
_lib.scl_comp_kcore_decomposition.argtypes = [POINTER(c_void_p), POINTER(c_void_p)]
_lib.scl_comp_kcore_decomposition.restype = c_int

def scl_comp_kcore_decomposition(adjacency, core_numbers):
    """
    Args:
        adjacency: struct scl_sparse_matrix *
        core_numbers: scl_index_t *
    
    Returns:
        int
    """
    return _lib.scl_comp_kcore_decomposition(adjacency, core_numbers)


# ===========================================================================
# Exports
# ===========================================================================

__all__ = [
    "scl_comp_average_path_length",
    "scl_comp_bfs",
    "scl_comp_clustering_coefficient",
    "scl_comp_component_sizes",
    "scl_comp_connected_components",
    "scl_comp_count_triangles",
    "scl_comp_degree_distribution",
    "scl_comp_degree_sequence",
    "scl_comp_degree_statistics",
    "scl_comp_dfs",
    "scl_comp_global_clustering_coefficient",
    "scl_comp_graph_density",
    "scl_comp_graph_diameter",
    "scl_comp_is_connected",
    "scl_comp_kcore_decomposition",
    "scl_comp_largest_component",
    "scl_comp_multi_source_bfs",
    "scl_comp_parallel_bfs",
    "scl_comp_topological_sort",
]